# claude-code-hosted

./: .gitignore  CHECKLIST-fase0.md  CHECKLIST-fase1.md  CHECKLIST-fase2.md  CHECKLIST-fase3.md  CHECKLIST-fase4.md  CHECKLIST-fase5.md  CHECKLIST-fase6.md  CHECKLIST-v2.md  DECISIONS.md  INFRA.md  PLAN.md  PLAN_SP12.md  PROGRESS.md  README.md  REPORT.md  START.md  manage.py  pyproject.toml
.serena/: project.yml
backend/: docker-compose.docs.yml  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/config/: asgi.py  wsgi.py
backend/docs/: conf.py  make.bat  users.rst
deploy/: backup.sh  compose.infra.yml  install.sh  link-units.sh  panel-chown-agents.sh  panel-clone.sh  panel-docker.sh  panel-provision.sh  panel-purge.sh  panel-render.sh  restore.sh  sudoers.d-panel
deploy/systemd/: backup.service  backup.timer  claude-session@.service  monitor.service  monitor.timer  panel-infra.service  panel.service  tg-bridge.service  tmux@.service  ttyd@.service
deploy/traefik/: traefik.yml
deploy/ttyd/: allocate.sh  render_routes.py  start.sh
frontend/: package.json
legacy/: AGENTS.md  docker-compose.dokploy.yml  docker-compose.local.yml  docker-compose.production.yml
legacy/backend/: .gitignore  README.md
mcp_github/: server.py
mcp_ports/: server.py
panel/: asgi.py  settings.py  settings_test.py  urls.py
panel/api_v1/: __init__.py  auth.py  docker.py  github.py  mcps.py  models.py  permissions.py  projects.py  sessions.py  urls.py
panel/core/: admin.py  apps.py  bus.py  constants.py  consumers.py  crypto.py  models.py  renderer.py  routing.py  stream.py
scripts/: monitor.py  render_all.py  s3_backup.py
tests/: conftest.py
workers/: session_worker.py  supervisor.py  tg_bridge.py
(+118 files in other folders)
